[workspace]
members = [
	"contracts/dao/cwd-core",
	"contracts/dao/proposal/*",
    "contracts/dao/pre-propose/*",
	"contracts/dao/voting/*",
	"contracts/subdao/multisig/subdao-core",
	"contracts/subdao/multisig/proposal/*",
	"contracts/subdao/multisig/pre-propose/*",
	"contracts/subdao/multisig/voting/*",
	"packages/*",
	]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true
