[workspace]
members = [
#    "contracts/dao/cwd-core",
#    "contracts/dao/neutron-chain-manager",
    "contracts/dao/neutron-staking-rewards",
#    "contracts/dao/proposal/*",
#    "contracts/dao/pre-propose/*",
#    "contracts/dao/voting/*",
#    "contracts/subdaos/cwd-subdao-core",
#    "contracts/subdaos/proposal/*",
#    "contracts/subdaos/pre-propose/*",
#    "contracts/subdaos/cwd-subdao-timelock-single",
#    "contracts/tokenomics/reserve",
#    "contracts/tokenomics/distribution",
#    "packages/*",
]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true
