[package]
name = "neutron-dao"
version = "0.1.0"
authors = ["quasisamurai <pavel.kalinin@p2p.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/neutron/neutron-dao"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0", features = ["stargate"] }
cw2 = "0.13"
cw-storage-plus = "0.13"
prost = "0.10"
prost-types = "0.10"
neutron_bindings = {path = "../../packages/bindings"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0", default-features = false }
