[package]
name = "neutron-dao"
version = "0.1.0"
authors = ["quasisamurai"]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/neutron/neutron-dao"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0", features = ["stargate"] }
cw2 = "0.13"
cw-storage-plus = "0.13"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
