[package]
name = "cwd-core"
version = "0.2.0"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"
repository = "https://github.com/DA0-DA0/dao-contracts"
description = "A DAO DAO core module."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
neutron-sdk = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk.git", rev = "d5656d0a830b6a6604b2471e7c2e72863d9c60ba" }
cosmwasm-std = { version = "1.3.0", features = ["ibc3"] }
cosmwasm-storage = { version = "1.3.0" }
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw-utils = { version = "1.0.1" }
cw20 = "1.1.0"
cw721 = "0.13"
schemars = "0.8.8"
serde = { version = "1.0.149", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cwd-interface = { path = "../../../packages/cwd-interface" }
cwd-macros = { path = "../../../packages/cwd-macros" }
cw-paginate = { path = "../../../packages/cw-paginate" }
cw-core-v1 = { package = "cw-core", version = "0.1.0", git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v1.0.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.3.0" }
