[package]
authors = ["ekez <ekez@withoutdoing.com>"]
description = "A DAO DAO core module."
edition = "2021"
name = "cwd-core"
repository = "https://github.com/DA0-DA0/dao-contracts"
version = "0.2.2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "2.0.4" }
cosmwasm-std = { version = "2.0.4" }
cw-core-v1 = { package = "cw-core", version = "0.1.0", git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v1.0.0" }
cw-paginate = { path = "../../../packages/cw-paginate" }
cw-storage-plus = "2.0.0"
cw-utils = { version = "2.0.0" }
cw2 = "2.0.0"
cw20 = "2.0.0"
cw721 = "0.18.0"
cwd-interface = { path = "../../../packages/cwd-interface" }
cwd-macros = { path = "../../../packages/cwd-macros" }
neutron-sdk = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk", rev = "33e0cb123a4a91a37eb0688a8fd9b52bce320ed9" }
schemars = "0.8.15"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
neutron-subdao-core = { version = "*", path = "../../../packages/neutron-subdao-core" }
