[package]
authors = ["Andrei Zavgorodnii <andrei.z@hadronlans.org>"]
description = "A chain manager implementation that grants fine-grained admin permissions to other contracts"
edition = "2021"
name = "neutron-chain-manager"
repository = "https://github.com/neutron-org/neutron-dao"
version = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = {version = "1.3.0"}
cosmwasm-std = {version = "1.3.0"}
cosmwasm-storage = {version = "1.3.0"}
cw-controllers = "1.1.0"
cw-paginate = {path = "../../../packages/cw-paginate"}
cw-storage-plus = "1.1.0"
cw-utils = {version = "1.0.1"}
cw2 = "1.1.0"
cwd-interface = {path = "../../../packages/cwd-interface"}
cwd-macros = {path = "../../../packages/cwd-macros"}
schemars = "0.8.8"
serde = {version = "1.0.175", default-features = false, features = ["derive"]}
serde_with = {version = "3.7.0", features = ["json"]}
thiserror = {version = "1.0"}
neutron-sdk = { git = "https://github.com/neutron-org/neutron-sdk.git", branch = "feat/whitelist-tf-hooks" }
serde-json-wasm = "1.0.1"
prost = "0.9.0"

[dev-dependencies]
anyhow = "1.0.57"
cw-multi-test = "0.16.5"
