[package]
authors = ["Andrei Zavgorodnii <andrei.z@hadronlans.org>"]
description = "An implementation of Flashloans for Neutron"
edition = "2021"
name = "neutron-flashloans"
repository = "https://github.com/neutron-org/neutron-dao"
version = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = {version = "1.3.0"}
cosmwasm-std = {version = "1.3.0"}
cosmwasm-storage = {version = "1.3.0"}
cw-controllers = "1.1.0"
cw-paginate = {path = "../../../packages/cw-paginate"}
cw-storage-plus = "1.1.0"
cw-utils = {version = "1.0.1"}
cw2 = "1.1.0"
cwd-interface = {path = "../../../packages/cwd-interface"}
cwd-macros = {path = "../../../packages/cwd-macros"}
schemars = "0.8.8"
serde = {version = "1.0.175", default-features = false, features = ["derive"]}
serde_with = {version = "3.7.0", features = ["json"]}
thiserror = {version = "1.0"}
neutron-sdk = "0.8.0"
serde-json-wasm = "1.0.1"
prost = { version = "0.12.3", default-features = false }
prost-types = { version = "0.12.3", default-features = false }
cosmos-sdk-proto = { version = "0.20.0", default-features = false }

[dev-dependencies]
anyhow = "1.0.57"
cw-multi-test = "0.16.5"
