[package]
authors = ["Andrei Zavgorodnii <andrei.z@hadronlans.org>"]
description = "A staking rewards implementation that distributes rewards to Neutron stakers"
edition = "2021"
name = "neutron-staking-rewards"
repository = "https://github.com/neutron-org/neutron-dao"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "2.1.4" }
cosmwasm-std = { version = "2.0.4" }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.8"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
anyhow = "1.0.57"
cw-multi-test = "0.16.5"
