[package]
name = "rescueeer"
version = "0.2.0"
authors = ["oldremez"]
edition = "2021"
repository = "https://github.com/neutron-org/neutron-dao"
description = "rescuer"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.3" }
cosmwasm-std = { version = "1.1.3" }
cosmwasm-storage = { version = "1.1.3" }
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw-controllers = "1.0.1"
schemars = "0.8"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
neutron_bindings = { package = "neutron-sdk", version = "0.4.0" }

[dev-dependencies]
cw-multi-test = "0.16.2"
anyhow = "1.0.57"
