[package]
name = "cwd-subdao-core"
version = "0.2.0"
authors = ["ekez <ekez@withoutdoing.com>"]
edition = "2021"
repository = "https://github.com/neutron-org/neutron-dao"
description = "The subDAO core module."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
neutron_bindings = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk.git", rev = "4a5fc14e8725ed3fb530e9b97a41abc3cb1e2278" }
cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13"
cw2 = "0.13"
cw-utils = "0.13"
cw20 = "0.13"
cw721 = "0.13"
schemars = "0.8"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cwd-interface = { path = "../../../packages/cwd-interface" }
exec-control = { path = "../../../packages/exec-control" }
cwd-voting = { path = "../../../packages/cwd-voting" }
cwd-macros = { path = "../../../packages/cwd-macros" }
cw-paginate = { path = "../../../packages/cw-paginate" }
cw-core-v1 = { package = "cw-core", version = "0.1.0", git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v1.0.0" }
neutron-subdao-pre-propose-single = { path = "../../../packages/neutron-subdao-pre-propose-single" }
neutron-subdao-proposal-single = { path = "../../../packages/neutron-subdao-proposal-single" }
neutron-subdao-core = { path = "../../../packages/neutron-subdao-core" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
# TODO: remove this and enable tests.
#cw-multi-test = { version = "0.14", features = ["stargate"] }
