[package]
name = "cwd-subdao-timelock-single"
version = "0.2.0"
authors = ["Andrei Zavgorodnii <andrei.z@p2p.org>"]
edition = "2021"
repository = "https://github.com/neutron-org/neutron-dao"
description = "A timelock module for neutron subdao single-choice proposals"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
neutron_bindings = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk.git", rev = "c19b40c024eeaa8733af9ddee94a52798d78f469" }
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13"
cw2 = "0.13"
cw-utils = "0.13"
cw-controllers = "0.13"
schemars = "0.8"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cwd-interface = { path = "../../../packages/cwd-interface" }
cwd-macros = { path = "../../../packages/cwd-macros" }
neutron-subdao-pre-propose-single = { path = "../../../packages/neutron-subdao-pre-propose-single" }
neutron-subdao-timelock-single = { path = "../../../packages/neutron-subdao-timelock-single" }
cwd-pre-propose-base = { path = "../../../packages/cwd-pre-propose-base" }
neutron-subdao-core = { path = "../../../packages/neutron-subdao-core" }
neutron-dao-pre-propose-overrule = { path = "../../../packages/neutron-dao-pre-propose-overrule" }
cwd-proposal-single = { path = "../../../contracts/dao/proposal/cwd-proposal-single" }
cwd-voting = { path = "../../../packages/cwd-voting" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.13"
anyhow = "1.0.57"
