[package]
name = "cwd-subdao-timelock-single"
version = "0.2.3"
authors = ["Andrei Zavgorodnii <andrei.z@p2p.org>"]
edition = "2021"
repository = "https://github.com/neutron-org/neutron-dao"
description = "A timelock module for neutron subdao single-choice proposals"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
neutron-sdk = "0.10.0"
cosmwasm-std = { version = "2.0.4" }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw-controllers = "2.0.0"
schemars = "0.8.15"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cwd-interface = { path = "../../../packages/cwd-interface" }
cwd-macros = { path = "../../../packages/cwd-macros" }
neutron-subdao-pre-propose-single = { path = "../../../packages/neutron-subdao-pre-propose-single" }
neutron-subdao-timelock-single = { path = "../../../packages/neutron-subdao-timelock-single" }
cwd-pre-propose-base = { path = "../../../packages/cwd-pre-propose-base" }
neutron-subdao-core = { path = "../../../packages/neutron-subdao-core" }
neutron-dao-pre-propose-overrule = { path = "../../../packages/neutron-dao-pre-propose-overrule" }
cwd-proposal-single = { path = "../../../contracts/dao/proposal/cwd-proposal-single", features = ["library"] }
cwd-voting = { path = "../../../packages/cwd-voting" }
neutron-subdao-proposal-single = { path = "../../../packages/neutron-subdao-proposal-single" }

[dev-dependencies]
cosmwasm-schema = { version = "2.0.4" }
cw-multi-test = "2.0.1"
anyhow = "1.0.57"
cw-utils = { version = "2.0.0" }
