[package]
name = "neutron-distribution"
version = "0.1.0"
authors = ["Sergey Ratiashvili <sergey.r@p2p.org>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/neutron/neutron-dao"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.3.0" }
cw-storage-plus = "1.1.0"
schemars = "0.8.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
exec-control = { path = "../../../packages/exec-control" }
cwd-macros = { path = "../../../packages/cwd-macros" }
thiserror = { version = "1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.3.0", default-features = false }
