[package]
authors = ["Sergey Ratiashvili <sergey.r@p2p.org>"]
edition = "2021"
license = "Apache-2.0"
name = "neutron-distribution"
repository = "https://github.com/neutron/neutron-dao"
version = "0.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
cosmwasm-schema = { version = "2.0.4", default-features = false }
cosmwasm-std = { version = "2.0.4" }
cw-storage-plus = "2.0.0"
cwd-macros = { path = "../../../packages/cwd-macros" }
exec-control = { path = "../../../packages/exec-control" }
schemars = "0.8.15"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw2 = "2.0.0"

[dev-dependencies]
