[package]
authors = ["Sergey Ratiashvili <sergey.r@p2p.org>"]
edition = "2021"
license = "Apache-2.0"
name = "neutron-reserve"
repository = "https://github.com/neutron/neutron-dao"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = {version = "1.3.0", default-features = false}
cosmwasm-std = {version = "1.3.0"}
cw-storage-plus = "1.1.0"
cwd-macros = {path = "../../../packages/cwd-macros"}
exec-control = {path = "../../../packages/exec-control"}
neutron-sdk = {package = "neutron-sdk",  git="https://github.com/neutron-org/neutron-sdk", branch="sdk/47", version="0.7.0"}
schemars = "0.8.8"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
thiserror = {version = "1.0"}

[dev-dependencies]
