[package]
authors = ["Sergey Ratiashvili <sergey.r@p2p.org>"]
edition = "2021"
license = "Apache-2.0"
name = "neutron-reserve"
repository = "https://github.com/neutron/neutron-dao"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
cosmwasm-schema = { version = "2.0.4", default-features = false }
cosmwasm-std = { version = "2.0.4" }
cw-storage-plus = "2.0.0"
neutron-sdk = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk", rev = "33e0cb123a4a91a37eb0688a8fd9b52bce320ed9" }
schemars = "0.8.15"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw2 = "2.0.0"
cwd-macros = { path = "../../../packages/cwd-macros" }
exec-control = { path = "../../../packages/exec-control" }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.5.0" }
cw20 = "2.0.0"
