[package]
name = "cwd-pre-propose-multiple"
version = "0.2.0"
authors = ["ekez <zekemedley@gmail.com>", "Jake Hartnell <meow@no-reply.com>", "blue-note"]
edition = "2021"
repository = "https://github.com/DA0-DA0/dao-contracts"
description = "A DAO DAO pre-propose module for cwd-proposal-multiple for native and cw20 deposits."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw2 = "0.13.2"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
cwd-pre-propose-base = { version = "*", path = "../../../../packages/cwd-pre-propose-base" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
neutron_bindings = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk.git", rev = "263e4b36c905b7653e91000c4996a9e28c227c26" }
schemars = "0.8.8"
cosmwasm-schema = "1.0.0"

[dev-dependencies]
cw-multi-test = "0.13.2"
cw-utils = "0.13.2"
cw4-group = "0.13.2"
cw20 = "0.13.2"
cw20-base = "0.13.2"
cwd-proposal-single = { path = "../../proposal/cwd-proposal-single" }
cwd-core = { path = "../../../dao/cwd-core" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
cw-denom = { path = "../../../../packages/cw-denom" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-proposal-hooks = { path = "../../../../packages/cwd-proposal-hooks" }
