[package]
name = "cwd-pre-propose-multiple"
version = "0.2.0"
authors = ["ekez <zekemedley@gmail.com>", "Jake Hartnell <meow@no-reply.com>", "blue-note"]
edition = "2021"
repository = "https://github.com/DA0-DA0/dao-contracts"
description = "A DAO DAO pre-propose module for cwd-proposal-multiple for native and cw20 deposits."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.3.0" }
cw2 = "1.1.0"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
cwd-pre-propose-base = { version = "*", path = "../../../../packages/cwd-pre-propose-base" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
neutron-sdk = { package = "neutron-sdk", version = "0.6.1" }
schemars = "0.8.8"
cosmwasm-schema = "1.3.0"

[dev-dependencies]
cw-multi-test = "0.16.5"
cw-utils = { version = "1.0.1" }
cw4-group = "1.1.0"
cw20 = "1.1.0"
cw20-base = "1.1.0"
cwd-proposal-single = { path = "../../proposal/cwd-proposal-single" }
cwd-core = { path = "../../../dao/cwd-core" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
cw-denom = { path = "../../../../packages/cw-denom" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-proposal-hooks = { path = "../../../../packages/cwd-proposal-hooks" }
