[package]
name = "cwd-pre-propose-overrule"
version = "0.2.2"
authors = ["oldremez"]
edition = "2021"
repository = "https://github.com/neutron-org/neutron-dao"
description = "A pre-propose module for Neutron DAO overrule proposals creation."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.3.0" }
cw2 = "1.1.0"
cw-storage-plus = "1.1.0"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
cwd-pre-propose-base = { version = "*", path = "../../../../packages/cwd-pre-propose-base" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
neutron-sdk = "0.10.0"
schemars = "0.8.8"
thiserror = { version = "1.0.31" }
neutron-subdao-core = { version = "*", path = "../../../../packages/neutron-subdao-core" }
cwd-core = { version = "*", path = "../../../../contracts/dao/cwd-core", features = ["library"] }
neutron-subdao-timelock-single = { version = "*", path = "../../../../packages/neutron-subdao-timelock-single" }
neutron-dao-pre-propose-overrule = { version = "*", path = "../../../../packages/neutron-dao-pre-propose-overrule" }
cwd-proposal-single = { version = "*", path = "../../../../contracts/dao/proposal/cwd-proposal-single", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = "1.3.0"
cw-utils = { version = "1.0.1" }
cwd-proposal-single = { path = "../../proposal/cwd-proposal-single" }
cwd-core = { path = "../../cwd-core" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
cw-denom = { path = "../../../../packages/cw-denom" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-proposal-hooks = { path = "../../../../packages/cwd-proposal-hooks" }
